# graphrag-example

./: .gitmodules  pyproject.toml
gmhf-debug/input/: GMHF.txt
ragtest-gmhf/cache/community_reporting/: create_community_report-chat-v2-62e0bad43989b254069c5b8df7394cf6  create_community_report-chat-v2-932dd8a5215ba514729a8fe6a4e221ed  create_community_report-chat-v2-d2749ddc277302f7cfef1052286ad304
ragtest-gmhf/cache/entity_extraction/: chat-13fe2c0a3c7c742e6414b7ad5eaca57d  chat-199f0671f5094c47e3f3b21f9dfeb901  chat-1a11cab5d58a676d7192255d3b082dd1  chat-1d25630dca788cb09bffa5fde7167ac7  chat-9574a9ead7faea41adfc553cbf668a97  chat-a3e27b868a66813ab859954efafe84cf  chat-ad5b2c2f0f7614e40eb2f1ea44f0efcb  chat-b3cdf20526554584c65d76e51a65af07  extract-continuation-0-chat-v2-110c0848e3053aaf7cfe29baeab5a74a  extract-continuation-0-chat-v2-21ece0191ce5a756cb50a94c3905aba0  extract-continuation-0-chat-v2-5a82904156db8a57ddff92954fadad20  extract-continuation-0-chat-v2-9103577017ad93e6cdc6580271de3ab6  extract-continuation-0-chat-v2-abe471dbc21e91b566f2421733a7d04b  extract-continuation-0-chat-v2-b9e1022d6237ab59f9b78eb7ef0f3541  extract-continuation-0-chat-v2-c56b471fb8bcfe7929bcaa47adef3ff3  extract-continuation-0-chat-v2-f575fa2e41f79d5b9bfa1cfd1f01cbf1
ragtest-gmhf/cache/summarize_descriptions/: summarize-chat-v2-0755852aa6fc78fdf9ed401d89cd2ff6  summarize-chat-v2-114263a178be7492876ccfa90be3f1ea  summarize-chat-v2-2be39fa74237893d9bf95d981a29f6a6  summarize-chat-v2-42db49d482c19c20450484feba43813b  summarize-chat-v2-510e5879fedbb8dcdec4972f82d79061  (+19 more)
(+20 files in other folders)
