[tool.poetry]
name = "graphrag-example"
version = "0.1.0"
description = ""
authors = ["zysoong <ziyang.song@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = " >=3.10,<3.13"
graphrag = {path = "graphrag"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
